# agentic-ai-labs

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  5_extra.ipynb  app.py
notebooks/me/: summary.txt
